--- a/test/.gitignore
+++ b/test/.gitignore
@@ -99,6 +99,7 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
+pom.properties
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
